fix text in homepage services menu not fitting in the boxes for old iphone sizes close #34

--- a/sites/all/themes/say_custom/sass/screen.scss
+++ b/sites/all/themes/say_custom/sass/screen.scss
@@ -940,6 +940,10 @@ body.page-node.node-type-page .field-name-body
 				padding: 0 !important;
 				transform: translateY(-50%);
 			}
+			@media screen and (max-width: 360px)
+			{
+				font-size: 1em;
+			}
 		}
 	}
 	.active:after
